[project]
name = "jk-toolkit"
version = "0.1.0"
description = "A little toolkit of utility functions I use across projects"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jeppe Klitgaard", email = "hi@jeppe.science" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
